--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=ThingsML
-version=1.4.0
-author=Joseph Verburg (joseph.verburg@kpn.com), Paul Marcelis (paul.marcelis@kpn.com)
-maintainer=Joseph Verburg (joseph.verburg@kpn.com)
+version=1.4.1
+author=KPN IOT
+maintainer=KPN IOT
 sentence=Thingsml Encoder/Decoder
 paragraph=For use in LoraWAN and M2M networks
 category=Communication
